--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -1,19 +1,19 @@
 iapiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: my-another-app
 spec:
   selector:
     matchLabels:
-      app: myapp
+      app: my-another-app
   replicas: 2
   template:
     metadata:
       labels:
-        app: myapp
+        app: my-another-app
     spec:
       containers:
-      - name: myapp
+      - name: my-another-app
         image: nanajanashia/argocd-app:1.1
         ports:
         - containerPort: 8080
