--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: my-another-app-service
 spec:
   selector:
-    app: myapp
+    app: my-another-app
   ports:
   - port: 8080
     protocol: TCP
